Attempt to fix team section overlap on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -1108,7 +1108,7 @@ section.vid div.step-heading {
   font-family: inherit;
 }
 
-.team-section {
+.team-section div {
   display: flex;
   flex-direction: column;
   align-items: center;
